Version (0.12.2)
================
* Distribute CUDA toolkit in Anaconda
* Better error message
* Fix gufunc signature parsing to accept trailing comma.

Version (0.12.1)
================
* Fix libNVVM search path (now accept directory path)
* Fix sign-extension error in forloop precondition
* Fix support for true-division

Version (0.12.0)
================
* Use CUDA 5.5rc
* Expand math support through CUDA NVVM libdevice
* Rewritten nopython mode for CUDA-Python
* Removed experimental CU API
* Removed minivectorize

Version (0.11.0)
================
* Add cuBlas binding
* Improve CUDA ndarray and memory managment
* Add CUDA mapped host memory 
* Add CUDA event

Version (0.10.1)
================
* Fix CU memory leak
* Fix CU hanging on some GPU
* Improve error message for unsupported GPU devices
* Add cuFFT

Version (0.10)
==============
* Added Compute Unit (CU) API
* Added cuRAND binding
* Added CUDA device array
* Various improvements to CUDA support

Version (0.9)
=============
* Improve CUDA driver discovery.

Version 0.8
============
* Update for SSA types inference in Numba
* Allow user to select CUDA device
* Add support for pinned and mapped CUDA memory
* Improvement on small memory allocation in CUDA
* Default to use libNVVM from Anaconda
* Bug fixes

Version 0.7
============
* Prange: parallel for-range
* Array slicing
* Refactor CUDA dispatch mechanisms
* Migrate to NVVM instead of PTX for CUDA codegen

Version 0.6 and earlier
========================
* Array expressions
* Fast ufuncs and generalized-ufunc (gufunc) with single-core, multi-core and CUDA
* CUDA JIT.
