@@ -2,7 +2,14 @@
 CUDA Support
 ------------
 
-All CUDA support requires `CUDA 5.5 <https://developer.nvidia.com/cuda-toolkit>`_.
+.. NOTE:: Linux, Windows and Mac OSX 32/64-bit with CUDA 5.5.
+          Only support CUDA devices with **compute capability 2.0 and above**.
+
+
+.. NOTE:: As of version 0.12.2, Anaconda is distributing a subset of CUDA 
+          toolkit 5.5 libraries.  
+          The following information is no longer necessary.
+
 
 NumbaPro searches in the system shared library path for the CUDA drivers and CUDA libraries (e.g. cuRAND, cuBLAS).  Users can set environment variable `LD_LIBRARY_PATH` to the directory of the CUDA drivers to ensure that NumbaPro can find them.  The instruction to do so it printed at the end of the CUDA SDK installation.
 
@@ -14,6 +21,3 @@ User can override the search path with the following environment variables:
     path to CUDA libNVVM shared library file
 - NUMBAPRO_LIBDEVICE
     path to CUDA libNVVM libdevice directory which contains .bc files.
-
-**Supported**: Linux, Windows and Mac OSX 32/64-bit with CUDA 5.5.  Only support CUDA devices with **compute capability 2.0 and above**.
-
